--- a/ProcGenFun.WinForms/ProcGenFun.WinForms.csproj
+++ b/ProcGenFun.WinForms/ProcGenFun.WinForms.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ScottPlot.WinForms" Version="5.0.47" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ProcGenFun\ProcGenFun.csproj" />
   </ItemGroup>
 
