--- a/ProcGenFun/ProcGenFun.csproj
+++ b/ProcGenFun/ProcGenFun.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="RandN" Version="0.4.0" />
+    <PackageReference Include="Svg" Version="3.4.7" />
   </ItemGroup>
 
 </Project>
