--- a/ProcGenFun/ProcGenFun.csproj
+++ b/ProcGenFun/ProcGenFun.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NodaTime" Version="3.2.2" />
     <PackageReference Include="RandN" Version="0.4.0" />
     <PackageReference Include="Svg" Version="3.4.7" />
   </ItemGroup>
