--- a/ProcGenFun/ProcGenFun.csproj
+++ b/ProcGenFun/ProcGenFun.csproj
@@ -7,9 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="33.1.0" />
     <PackageReference Include="NodaTime" Version="3.2.2" />
     <PackageReference Include="RandN" Version="0.4.0" />
     <PackageReference Include="Svg" Version="3.4.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="BirthdayWeights.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
